Unit tests and service for change/remove products in cart
