# API/src/main/java/com/kbaje/eshop/dto/ChangeQuantityDto.java
@@ -1,0 +1,10 @@
+package com.kbaje.eshop.dto;
+
+import java.util.UUID;
+
+public class ChangeQuantityDto {
+    
+    public UUID productId;
+    public int quantity;
+    
+}
